--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Monyze</title>
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/db.js"></script>
   <script src="js/app.js"></script>
 </head>
 <body>
