feat: update app title and add install button for PWA support

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
   <link rel="icon" type="image/png" href="images/icon-128.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="Gastos">
+  <meta name="apple-mobile-web-app-title" content="Expenses">
   <link rel="apple-touch-icon" href="images/icon-128.png">
 </head>
 <body>
   <header>
     <h1>MONYZE</h1>
     <h2>💰 Controle de Gastos</h2>
+    <button id="btn-install" class="btn-install hidden">📱 Instalar App</button>
   </header>
 
   <main>
