--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </section>
   </main>
 
-  <div id="modal" class="modal hidden">
+  <div id="modal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
       <h2>Nova Transação</h2>
