feat: change button position in home page

--- a/index.html
+++ b/index.html
@@ -100,19 +100,21 @@
       </div>
     </section>
 
+    <section class="actions">
+      <button id="btn-add" class="btn-primary">+ Nova Transação</button>
+    </section>
+    
     <section class="chart-section">
-      <h2>📊 Expenses by Category</h2>
+      <h2>📊 Despesas por Categoria</h2>
       <div class="chart-container">
         <canvas id="expenses-chart"></canvas>
       </div>
       <div id="chart-empty-message" class="chart-empty-message hidden">
-        No expense data to display
+        Nenhuma despesa para exibir
       </div>
     </section>
 
-    <section class="actions">
-      <button id="btn-add" class="btn-primary">+ Nova Transação</button>
-    </section>
+
 
     <section class="transactions">
       <h2>Histórico Recente</h2>
